<resources>
    <string name="app_icon">app icon</string>
    <string name="app_name">Flash</string>
    <string name="app_name_full">Flash: All Video Downloader</string>
    <string name="browser_search_hint">Search or Type URL</string>
    <string name="search_or_type_url">Search or Type URL</string>
    <string name="title_video">Video</string>
    <string name="title_progress">Downloading</string>
    <string name="title_settings">Settings</string>
    <string name="bottom_nav_tab">Tab</string>
    <string name="bottom_nav_progress">Downloading</string>
    <string name="bottom_nav_finished">Finished</string>
    <string name="how_to_download">How to download?</string>
    <string name="favorite_sites">Favorite sites</string>
    <string name="new_tab_button">New tab</string>
    <string name="copy_link">Copy link</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="desktop_site">Desktop site</string>
    <string name="link_copied">Link copied</string>
    <string name="tab_counter_content_description">Open tabs: %1$d</string>
    <string name="help_title">How to download videos</string>
    <string name="help_subtitle">Three quick steps to grab any video you can play in the browser.</string>
    <string name="help_step1_title">1. Open the video page</string>
    <string name="help_step1_body">Tap a tile on the home screen, or type any URL in the search bar at the top. SuperX opens the page in its built-in browser the same way Chrome would.</string>
    <string name="help_step2_title">2. Press play and wait for detection</string>
    <string name="help_step2_body">Hit the play button on the video. SuperX watches the network in the background and the floating button shows a loading animation while it scans for every available quality. This usually takes 5–50 seconds depending on the site.</string>
    <string name="help_step3_title">3. Tap the download button and choose a quality</string>
    <string name="help_step3_body">Once the loading dots stop, the floating download button turns solid. Tap it, pick the resolution you want from the dialog, then press the colored Download button. Your file moves to the Progress tab and lands in Finished when it is done.</string>
    <string name="help_tip_title">Helpful tips</string>
    <string name="help_tip_body">• If a video is not detected, tap reload on the page or switch the site to Desktop mode from the menu.\n• Some sites stream multi-part files. The download will keep going in the background even if you close the page.\n• You can change the ad-detection threshold and thread count in Settings under General.\n• Long-press a tile on the home screen to remove it from your favorites.</string>
    <string name="help_got_it">Got it</string>
    <string name="prefix_www" translatable="false">www.</string>
    <string name="prefix_m" translatable="false">m.</string>
    <string name="prefix_wap" translatable="false">wap.</string>
    <string name="prefix_dot" translatable="false">.</string>
    <string name="prefix_slash" translatable="false">/</string>
    <string name="tabs">Tabs</string>
    <string name="homepage">Homepage</string>
    <string name="close_current_tab">Close current tab</string>
    <string name="close_other_tabs">Close other tabs</string>
    <string name="close_browser">Close browser</string>
    <string name="settings_download_section">Download</string>
    <string name="settings_browser_section">Browser</string>
    <string name="settings_general_section">General Settings</string>
    <string name="settings_help_section">Help</string>
    <string name="settings_advanced_section">Advanced</string>
    <string name="settings_download_location">Download location</string>
    <string name="settings_download_wifi_only">Download with Wi-Fi Only</string>
    <string name="settings_block_ads">Block ads</string>
    <string name="settings_recently_used_websites">Recently used websites</string>
    <string name="settings_search_engine">Search engine</string>
    <string name="settings_clear_cache">Clear cache</string>
    <string name="settings_clear_browser_history">Clear browser history</string>
    <string name="settings_clear_cookies">Clear cookies</string>
    <string name="settings_language_options">Language options</string>
    <string name="settings_language_default">Default</string>
    <string name="settings_sync_to_gallery">Sync to gallery</string>
    <string name="settings_how_to_download">How to Download</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_check_updates">Check for updates</string>
    <string name="settings_app_version">App version</string>
    <string name="settings_state_on">On</string>
    <string name="settings_state_off">Off</string>
    <string name="settings_cleared">Cleared</string>
    <string name="settings_history_cleared">Browser history cleared</string>
    <string name="settings_cache_cleared">Cache cleared</string>
    <string name="search_engine_custom">Custom URL</string>
    <string name="search_engine_custom_hint">Enter custom search URL with %s</string>
    <string name="search_engine_google" translatable="false">Google</string>
    <string name="search_engine_ask" translatable="false">Ask</string>
    <string name="search_engine_bing" translatable="false">Bing</string>
    <string name="search_engine_yahoo" translatable="false">Yahoo</string>
    <string name="search_engine_startpage" translatable="false">StartPage</string>
    <string name="search_engine_startpage_mobile" translatable="false">StartPage (Mobile)</string>
    <string name="search_engine_duckduckgo">DuckDuckGo (Privacy)</string>
    <string name="search_engine_duckduckgo_lite">DuckDuckGo Lite (Privacy)</string>
    <string name="search_engine_baidu">Baidu (Chinese)</string>
    <string name="search_engine_yandex">Yandex (Russian)</string>
    <string name="language_default">Default</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_german" translatable="false">Deutsch</string>
    <string name="language_greek" translatable="false">Ελληνικά</string>
    <string name="language_spanish" translatable="false">Español (España)</string>
    <string name="language_french" translatable="false">Français</string>
    <string name="language_hungarian" translatable="false">Magyarország</string>
    <string name="language_italian" translatable="false">Italiano</string>
    <string name="language_japanese" translatable="false">日本語</string>
    <string name="language_korean" translatable="false">한국어</string>
    <string name="language_dutch" translatable="false">Nederlands</string>
    <string name="language_polish" translatable="false">Polski</string>
    <string name="language_portuguese_pt" translatable="false">Português (Portugal)</string>
    <string name="language_portuguese_br" translatable="false">Português (Brasil)</string>
    <string name="language_russian" translatable="false">Русский</string>
    <string name="language_serbian" translatable="false">Српски</string>
    <string name="language_turkish" translatable="false">Türkçe</string>
    <string name="language_chinese" translatable="false">中文</string>
    <string name="language_indonesian" translatable="false">Bahasa Indonesia</string>
    <string name="language_bengali" translatable="false">বাংলা</string>
    <string name="brand_facebook" translatable="false">Facebook</string>
    <string name="brand_instagram" translatable="false">Instagram</string>
    <string name="brand_vimeo" translatable="false">Vimeo</string>
    <string name="brand_dailymotion" translatable="false">Dailymotion</string>
    <string name="brand_tiktok" translatable="false">TikTok</string>
    <string name="brand_twitter" translatable="false">Twitter</string>
    <string name="brand_ringtone" translatable="false">Ringtone</string>
    <string name="brand_whatsapp" translatable="false">WhatsApp</string>
    <string name="dialog_video_title">Video found:</string>
    <string name="dialog_preview_video">Preview Video</string>
    <string name="dialog_download_video">Download Video</string>
    <string name="dialog_download_cancel">Cancel</string>
    <string name="filter_video">Video</string>
    <string name="filter_audio">Audio</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_download">Download</string>
    <string name="no_formats_available">No formats available</string>
    <string name="resolving_audio">Resolving audio\u2026</string>
    <string name="video_empty_message">You have not downloaded any video yet.</string>
    <string name="video_empty_title">Your library is ready</string>
    <string name="video_empty_subtitle">Finished downloads will land here. Find a video in the browser, tap download, and it shows up the moment it\'s done.</string>
    <string name="video_empty_tip">Tip: long-press a finished video to rename, share, or open it in another player.</string>
    <string name="video_empty_cta">Browse and download</string>
    <string name="video_menu_rename">Rename</string>
    <string name="video_menu_delete">Delete</string>
    <string name="video_menu_share">Share</string>
    <string name="video_rename_title">Rename video</string>
    <string name="video_rename_invalid">Invalid name. Please try again!</string>
    <string name="video_rename_exist">Video name already exists!</string>
    <string name="video_share_message">You don\'t have any video player app installed on your device</string>
    <string name="video_action_mode_title">%1$d selected</string>
    <string name="video_top_select">Select</string>
    <string name="video_top_select_all">Select all</string>
    <string name="video_top_delete_selected">Delete</string>
    <string name="video_delete_dialog_title">Delete video?</string>
    <string name="video_delete_dialog_message">This video file will be permanently deleted from your device.</string>
    <string name="video_delete_many_title">Delete %1$d videos?</string>
    <string name="video_delete_many_message">The selected video files will be permanently deleted from your device.</string>
    <string name="video_delete_confirm">Delete</string>
    <string name="video_delete_cancel">Cancel</string>
    <string name="progress_empty_message">Your finished and in-progress videos will land here.</string>
    <string name="settings_general" translatable="false">GENERAL</string>
    <string name="settings_videos_folder">Videos folder</string>
    <string name="settings_folder_path" translatable="false">folder path</string>
    <string name="settings_clear_browser_cookies">Clear browser cookies</string>
    <string name="settings_message_open_folder">You don\'t have any file explorer app installed on your device</string>
    <string name="progress_menu_cancel">Cancel</string>
    <string name="app_download_channel_id" translatable="false">download_channel_id</string>
    <string name="all_text_cancel">Cancel</string>
    <string name="progress_menu_pause">pause</string>
    <string name="progress_menu_resume">resume</string>
    <string name="download_link_label">Video Url</string>
    <string name="history">History</string>
    <string name="share_link">Share</string>
    <string name="desktop_mode">Desktop site</string>
    <string name="settings">Settings</string>
    <string name="proxy">Proxy</string>
    <string name="help">Help</string>
    <string name="new_tab">New Tab</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarks_list">Bookmarks</string>
    <string name="progress_top_resume_all">Download all</string>
    <string name="progress_top_pause_all">Pause all</string>
    <string name="progress_top_delete_all">Delete all</string>
    <string name="progress_top_batch_select">Batch select</string>
</resources>