<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_resume_all"
        android:icon="@drawable/resume_24px"
        android:title="@string/progress_top_resume_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_pause_all"
        android:icon="@drawable/pause_circle_24px"
        android:title="@string/progress_top_pause_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:icon="@drawable/delete_forever_24px"
        android:title="@string/progress_top_delete_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_batch_select"
        android:icon="@drawable/ic_select_all_24"
        android:title="@string/progress_top_batch_select"
        app:showAsAction="never" />
</menu>
