<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tab_browser"
        android:enabled="true"
        android:icon="@drawable/ic_tab_outline"
        android:title="@string/bottom_nav_tab"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tab_progress"
        android:enabled="true"
        android:icon="@drawable/downloading_24px"
        android:title="@string/bottom_nav_progress"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tab_video"
        android:enabled="true"
        android:icon="@drawable/ic_finished_folder"
        android:title="@string/bottom_nav_finished"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_settings"
        android:enabled="true"
        android:icon="@drawable/media_link_24px"
        android:title="Video Url"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
